# Ecommerce-data-pipeline

./: .gitignore  README.md
DatabricksNotbook/: Readme.md
DatabricksNotebook/: Readme.md
airflow/: pyproject.toml
airflow/dag/: customer_ingestion_dag.py  dag-ecomm-order-calculation.py  order_ingestion_dag.py  top_5_customer_transformation_dag.py
airflow/resources/: config.ini  seller.ddl
airflow/scr/data_ingestor/: customer_data_to_posgresql.py
airflow/scr/data_simulator/: customer_data_simulator.py  order_data_simulator.py  product_data_simulator.py  seller_data_simulator.py
airflow/scr/kafka_ops/: kafka_order_data_producer.py  kafka_producer_booksdb_sales.py  kafka_seller_data_producer.py
airflow/scr/operations/: customer_ops.py
airflow/scr/utility/: configuration.py  logger.py
airflow/utils/data_ingestor/: customer_data_to_posgresql.py
airflow/utils/data_simulator/: customer_data_simulator.py  product_data_simulator.py  seller_data_simulator.py
airflow/utils/kafka_ops/: kafka_order_data_producer.py  kafka_seller_data_producer.py
airflow/utils/utility/: configuration.py  logger.py
data/resources/: config.ini
ecommerce_docker/: docker-compose.yml  docker_runbook.txt
pyspark-etl/: requirements.txt
pyspark-etl/data/: customer_sample.csv
pyspark-etl/jobs/: customer_etl.py
pyspark-etl/test/: conftest.py  test_customer_etl.py  test_end_to_end.py
pyspark-etl/utils/: spark_utils.py
scala_code/Stream_data_piplines/: build.sbt
spark-apps/: build.sbt
streaming_project_docker/: docker-compose.yml
(+62 files in other folders)
